// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton Component snapshots should match snapshot 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  width: 0.776em;
  height: 0.776em;
  border-radius: 50%;
  box-shadow: 0px 0px 0px 0.05em #949ea3;
  background: transparent;
  border: solid 0.05em #fff;
  outline: none;
}

.c4 {
  margin-left: 0.5em;
}

.c1 {
  opacity: 0;
  left: 0;
  position: absolute;
  cursor: pointer;
  width: 1em;
  height: 1em;
}

.c1:checked + .c2 {
  box-shadow: 0px 0px 0px 0.05em #146292;
  background: #146292;
}

.c1:focus + .c2 {
  box-shadow: 0 0 0.3em #034a76;
}

<RadioButton__Wrapper>
  <label
    className="c0"
  >
    <div>
      <RadioButton__RadioInput
        onClick={[Function]}
      >
        <input
          className="c1"
          onClick={[Function]}
          type="radio"
        />
      </RadioButton__RadioInput>
      <RadioButton__StyledRadioInput>
        <div
          className="c2 c3"
        />
      </RadioButton__StyledRadioInput>
    </div>
    <RadioButton__Label>
      <span
        className="c4"
      >
        Radio label
      </span>
    </RadioButton__Label>
  </label>
</RadioButton__Wrapper>
`;

exports[`RadioButton Component snapshots should match snapshot 2`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  width: 0.776em;
  height: 0.776em;
  border-radius: 50%;
  box-shadow: 0px 0px 0px 0.05em #949ea3;
  background: transparent;
  border: solid 0.05em #fff;
  outline: none;
}

.c4 {
  margin-left: 0.5em;
}

.c1 {
  opacity: 0;
  left: 0;
  position: absolute;
  cursor: pointer;
  width: 1em;
  height: 1em;
}

.c1:checked + .c2 {
  box-shadow: 0px 0px 0px 0.05em #146292;
  background: #146292;
}

.c1:focus + .c2 {
  box-shadow: 0 0 0.3em #034a76;
}

<RadioButton__Wrapper>
  <label
    className="c0"
  >
    <div>
      <RadioButton__RadioInput
        checked={true}
        onClick={[Function]}
        readOnly={true}
      >
        <input
          checked={true}
          className="c1"
          onClick={[Function]}
          readOnly={true}
          type="radio"
        />
      </RadioButton__RadioInput>
      <RadioButton__StyledRadioInput>
        <div
          className="c2 c3"
        />
      </RadioButton__StyledRadioInput>
    </div>
    <RadioButton__Label>
      <span
        className="c4"
      >
        Radio label
      </span>
    </RadioButton__Label>
  </label>
</RadioButton__Wrapper>
`;

exports[`RadioButton Component snapshots should match snapshot 3`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  width: 0.776em;
  height: 0.776em;
  border-radius: 50%;
  box-shadow: 0px 0px 0px 0.05em #949ea3;
  background: transparent;
  border: solid 0.05em #fff;
  outline: none;
}

.c4 {
  margin-left: 0.5em;
}

.c1 {
  opacity: 0;
  left: 0;
  position: absolute;
  cursor: pointer;
  width: 1em;
  height: 1em;
}

.c1:checked + .c2 {
  box-shadow: 0px 0px 0px 0.05em #146292;
  background: #146292;
}

.c1:focus + .c2 {
  box-shadow: 0 0 0.3em #034a76;
}

<RadioButton__Wrapper>
  <label
    className="c0"
  >
    <div>
      <RadioButton__RadioInput
        checked={false}
        onClick={[Function]}
      >
        <input
          checked={false}
          className="c1"
          onClick={[Function]}
          type="radio"
        />
      </RadioButton__RadioInput>
      <RadioButton__StyledRadioInput>
        <div
          className="c2 c3"
        />
      </RadioButton__StyledRadioInput>
    </div>
    <RadioButton__Label>
      <span
        className="c4"
      >
        Radio label
      </span>
    </RadioButton__Label>
  </label>
</RadioButton__Wrapper>
`;

exports[`RadioButton Component snapshots should match snapshot 4`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0.5;
}

.c3 {
  width: 0.776em;
  height: 0.776em;
  border-radius: 50%;
  box-shadow: 0px 0px 0px 0.05em #949ea3;
  background: transparent;
  border: solid 0.05em #fff;
  outline: none;
}

.c4 {
  margin-left: 0.5em;
}

.c5:checked + .c2 {
  box-shadow: 0px 0px 0px 0.05em #146292;
  background: #146292;
}

.c5:focus + .c2 {
  box-shadow: 0 0 0.3em #034a76;
}

.c1 {
  opacity: 0;
  left: 0;
  position: absolute;
  cursor: not-allowed;
  width: 1em;
  height: 1em;
}

.c1:checked + .c2 {
  box-shadow: 0px 0px 0px 0.05em #146292;
  background: #146292;
}

.c1:focus + .c2 {
  box-shadow: 0 0 0.3em #034a76;
}

<RadioButton__Wrapper
  disabled={true}
>
  <label
    className="c0"
    disabled={true}
  >
    <div>
      <RadioButton__RadioInput
        disabled={true}
        onClick={[Function]}
      >
        <input
          className="c1"
          disabled={true}
          onClick={[Function]}
          type="radio"
        />
      </RadioButton__RadioInput>
      <RadioButton__StyledRadioInput>
        <div
          className="c2 c3"
        />
      </RadioButton__StyledRadioInput>
    </div>
    <RadioButton__Label>
      <span
        className="c4"
      >
        Radio label
      </span>
    </RadioButton__Label>
  </label>
</RadioButton__Wrapper>
`;
